# promptducer

./: README.md  pyproject.toml  requirements.txt  settings.conf  setup.py
docs/: conf.py  index.rst  modules.rst  promptducer.prompter.rst  promptducer.query_api.apis.rst  promptducer.query_api.rst  promptducer.rst  promptducer.source_reader.rst
promptducer/: helpers.py  main.py
promptducer/prompter/: ConcretePrompt1.py  GenDoc.py  __init__.py  prompter.py
promptducer/query_api/: __init__.py  query_api.py  token_counter.py
promptducer/query_api/apis/: query_estimator.py  query_gpt35.py  query_gpt4.py  query_sed_gpt.py  query_test.py
promptducer/responder/: responder.py
promptducer/responder/responders/: manual_response.py
promptducer/source_reader/: __init__.py  source_reader.py
tests/: test_prompter.py  test_query_api.py  test_source_reader.py
tests/source_reader_test_files/bad_examples/task1/: bad_java1.java  bad_java1.json
tests/source_reader_test_files/bad_examples/task2/: bad_java2.java
tests/source_reader_test_files/bad_examples/task3/: bad_python3.py
tests/source_reader_test_files/good_examples/task1/: good_java1.java
tests/source_reader_test_files/good_examples/task2/: good_java2.java
tests/source_reader_test_files/good_examples/task3/: good_python3.py
tests/source_reader_test_files/good_examples/task4/: good_java4.java  test.txt
